# scitex-tex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-dev-quality-audit-on-ubuntu-latest.yml  test.yml
.scitex/clew/: db.sqlite
docs/sphinx/: api.rst  conf.py  index.rst
examples/: quickstart.py
src/scitex_tex/: __init__.py  _export.py  _preview.py  _to_vec.py
src/scitex_tex/_skills/scitex-tex/: 01_installation.md  02_quick-start.md  03_python-api.md  SKILL.md
src/scitex_tex/_sphinx_html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_tex/_sphinx_html/.doctrees/: api.doctree  index.doctree
src/scitex_tex/_sphinx_html/.doctrees/api/: scitex_tex.doctree
src/scitex_tex/_sphinx_html/_modules/: index.html
src/scitex_tex/_sphinx_html/_modules/scitex_tex/: _export.html  _preview.html  _to_vec.html
src/scitex_tex/_sphinx_html/_sources/: index.rst.txt
src/scitex_tex/_sphinx_html/_sources/api/: scitex_tex.rst.txt
src/scitex_tex/_sphinx_html/api/: scitex_tex.html
tests/: conftest.py
tests/develop/: test_audit.py
tests/examples/: test_quickstart.py
tests/integration/: test_cross_package_imports.py  test_examples.py
tests/scitex_tex/: test__export.py  test__preview.py  test__to_vec.py
